# lib9c

./: .gitallowed  .gitignore  .gitmodules  CHANGES.md  CLAUDE.md  CNAME  CONTRIBUTING.md  Directory.Build.props  Lib9c.Common.ruleset  Lib9c.sln  Lib9c.sln.DotSettings  README.md  _typos.toml  index.html
.Lib9c.ActionEvaluatorCommonComponents/: ActionEvaluationMarshaller.cs  Lib9c.ActionEvaluatorCommonComponents.csproj  PreEvaluationBlockMarshaller.cs  Random.cs  TransactionMarshaller.cs
.Lib9c.ActionEvaluatorCommonComponents.Tests/: ActionEvaluationSerializerTest.cs  Lib9c.ActionEvaluatorCommonComponents.Tests.csproj
.Lib9c.Benchmarks/: Lib9c.Benchmarks.csproj  Program.cs
.Lib9c.DevExtensions.Tests/: Lib9c.DevExtensions.Tests.csproj  TableSheetsImporter.cs  UtilsTest.cs
.Lib9c.Miner.Tests/: CustomActionsDeserializableValidatorTest.cs  Lib9c.Miner.Tests.csproj  Lib9c.Proposer.Tests.csproj  ProposerTest.cs
.Lib9c.Parser.Tests/: Lib9c.Parser.Tests.csproj
.Lib9c.Plugin/: Lib9c.Plugin.csproj  PluginActionEvaluator.cs  WrappedKeyValueStore.cs
.Lib9c.Plugin.Shared/: IPluginActionEvaluator.cs  IPluginKeyValueStore.cs  Lib9c.Plugin.Shared.csproj
.Lib9c.StateService/: Lib9c.StateService.csproj  Program.cs
.Lib9c.Tests/: AccountExtensions.cs  ActionSerializer.cs  AddressesTest.cs  BlockPolicyTest.cs  CrystalCalculatorTest.cs  CurrenciesTest.cs  JsonStatesLoader.cs  JsonStatesLoaderTest.cs  TableSheets.cs  (+5 more)
integrations/python/: .gitignore  README.md  pyproject.toml
integrations/python/src/lib9c/: __init__.py
integrations/python/src/lib9c_python/: __init__.py
(+195735 files in other folders)
